# dreamerv3-jax

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 3f8a1956969f1bb9  a504e9ec6d70aca2  af0376a318b7d61b  da39a3ee5e6b4b0d
src/dreamer/core/: types.py
src/dreamer/utils/: README.md  distributions.py  replay_buffer.py  transforms.py
src/dreamer/world_model/: encoder.py
tests/utils/: test_distributions.py  test_replay_buffer.py  test_transforms.py
tests/world_model/: test_encoder.py
