[project]
name = "dreamerv3-jax"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "jax (>=0.6.1,<0.7.0)",
    "jaxlib (>=0.6.1,<0.7.0)",
    "flax (>=0.10.6,<0.11.0)",
    "optax (>=0.2.5,<0.3.0)",
    "chex (>=0.1.89,<0.2.0)",
    "rlax (>=0.1.7,<0.2.0)",
    "distrax (>=0.1.5,<0.2.0)",
    "gymnasium[atari] (>=1.1.1,<2.0.0)",
    "crafter (>=1.8.3,<2.0.0)",
    "tensorboardx (>=2.6.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
hypothesis = "^6.135.9"
pre-commit = "^4.2.0"
ruff = "^0.11.13"
black = "^25.1.0"
mypy = "^1.16.0"

